update ver 3.0
