# routes/utils/user_utils.js
@@ -55,17 +55,6 @@ async function getNewFamilyRecipeId(user_id){
     return "fa"+(recipes_count);
 }
 
-async function getAllMyRecipesPreview(user_id){
-    const recipes_details = await DButils.execQuery(`select recipe_id, title, image, readyInMinutes, popularity, vegan, vegetarian, glutenFree
-    from user_recipes where user_id='${user_id}'`);
-    recipes_details.map((element) => {
-        element.vegan = element.vegan == 1;
-        element.vegetarian = element.vegetarian == 1;
-        element.glutenFree = element.glutenFree == 1;
-    });
-    return recipes_details;
-}
-
 async function changeToPreviewFormat(user_id, recipes_details){
     recipes_details.map((element) => {
         element.vegan = element.vegan == 1;
@@ -92,7 +81,7 @@ async function getAllMyRecipesPreview(user_id){
 }
 
 async function getAllFamilyRecipes(user_id){
-    const recipes_details = await DButils.execQuery(`select recipe_id AS id, title, image, readyInMinutes, popularity AS aggregateLikes, vegan, vegetarian, glutenFree, owner, tradition,
+    const recipes_details = await DButils.execQuery(`select title, image, readyInMinutes, popularity, vegan, vegetarian, glutenFree, owner, tradition,
     servings, ingredients, instructions from family_recipes where user_id='${user_id}'`);
     recipes_details.map((element) => {
         element.vegan = element.vegan == 1;
